# commit-check

./: .buildinfo  .commit-check.yml  .commit-checker.yml  .commitcheck.yml  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.html  README.md  README.rst  ROADMAP.md  action.yml  cchk.toml  changelog.html  cli_args.html  configuration.html  example.html  genindex.html  index.html  migration.html  noxfile.py  objects.inv  pyproject.toml  requirements-dev.txt  searchindex.js  setup.cfg  test_commit.txt  test_commit_invalid.txt  troubleshoot.html  what-is-new.html
.codspeed/: results_1770620882289.json
.doctrees/: README.doctree  changelog.doctree  cli_args.doctree  configuration.doctree  environment.pickle  example.doctree  index.doctree  migration.doctree  troubleshoot.doctree  what-is-new.doctree
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug.yml  config.yml  feature-request.yml
.github/workflows/: CI.yml  codspeed.yml  commit-check.yml  labeler.yml  main.yml  publish-image.yml  publish-package.yml  release-drafter.yml  release.yml  scorecard.yml  tag-commit-check.yml  tag.yml
_sources/: README.rst.txt  changelog.rst.txt  cli_args.rst.txt  configuration.rst.txt  example.rst.txt  index.rst.txt  migration.rst.txt  what-is-new.rst.txt
_static/: sphinx_immaterial_theme.031443e5f05ec6255.min.css  sphinx_immaterial_theme.03ad8519cd8109347.min.css  sphinx_immaterial_theme.0555d7d8f9fd34954.min.css  sphinx_immaterial_theme.18099bdac814cf39e.min.css  sphinx_immaterial_theme.54ed2c381e31b6243.min.css  sphinx_immaterial_theme.7c8731c94d2ad5cc4.min.css  sphinx_immaterial_theme.7e524473233298638.min.css  sphinx_immaterial_theme.81faa92c8dd354cd2.min.css  sphinx_immaterial_theme.92fcd4811e001fed8.min.css  sphinx_immaterial_theme.9a10c98ab3f638910.min.css  sphinx_immaterial_theme.9a7b38e4e3b781810.min.css  sphinx_immaterial_theme.9b657aea0a9852883.min.css  sphinx_immaterial_theme.aa8ef8b9877314ef0.min.css  sphinx_immaterial_theme.c347a1a5f979bcadc.min.css  sphinx_immaterial_theme.cd7d21301904ce3d0.min.css  sphinx_immaterial_theme.dabf7f94384b85017.min.css  sphinx_immaterial_theme.f1b867f4c5854f04e.min.css
_static/stylesheets/: sphinx_immaterial_theme.d4c2e536dfce3a8ff.min.css
commit_check/: __init__.py  ai_signatures.py  ai_signatures_data.py  api.py  author.py  branch.py  check_msg_formatting.py  commit.py  config.py  config_merger.py  constants.py  engine.py  error.py  exclude.py  fixer.py  imperatives.py  main.py  message.py  rule_builder.py  rules.py  rules_catalog.py  ticket.py  util.py
commit_checker/: main.py  message.py  util.py
docs/: changelog.rst  compare.rst  conf.py  configuration.rst  demo.tape  example.rst  index.md  index.rst  migration.rst  presets.rst  requirements.txt  troubleshoot.rst  what-is-new.rst
docs/_static/: extra_css.css
docs/assets/: badge-v0.json
examples/: README.md  gitlab-ci.yml
presets/: minimal.toml  recommended.toml  strict.toml
tests/: ai_signatures_test.py  api_test.py  author_test.py  branch_test.py  commit_test.py  config_edge_test.py  config_fallback_test.py  config_import_test.py  config_merger_test.py  config_test.py  engine_comprehensive_test.py  engine_test.py  error_test.py  fixer_test.py  integration_test.py  main_test.py  rule_builder_test.py  test_branch.py  test_config.py  test_main.py  util_test.py
