[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-check"
description = "Check commit message formatting, branch naming, commit author, email, and more."
readme = "README.rst"
keywords = ["commit conventions", "conventional commits", "branch naming", "commit-check", "message", "lint message"]
license = {text = "MIT License"}
authors = [
    { name = "Peter Shen", email = "xianpeng.shen@gmail.com" },
]
dependencies = ["pyyaml"]
classifiers = [
    # https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Utilities"  ,
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.scripts]
commit-check = "commit_check.main:main"

[project.urls]
source =  "https://github.com/commit-check/commit-check"
tracker = "https://github.com/commit-check/commit-check/issues"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[tool.setuptools]
zip-safe = false
packages = ["commit_check"]

[tool.setuptools_scm]
# It would be nice to include the commit hash in the version, but that
# can't be done in a PEP 440-compatible way.
version_scheme= "no-guess-dev"
# Test PyPI does not support local versions.
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.mypy]
show_error_codes = true
show_column_numbers = true

[tool.coverage]
omit = [
    # don't include tests in coverage
    "tests/*",
]
