[metadata]
name = commit_check
version = 0.1.0
description = Check each commit before going into production
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/commit-check
author = Peter Shen
author_email = xianpeng.shen@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    virtualenv>=20.0.8
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    commit-check = commit_check.main:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
omit = commit_check/resources/*

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
